# tea-qt

./: .gitignore  ABOUT-PL.txt  AUTHORS  CMakeLists.txt  ChangeLog  FUNDING.yml  INSTALL  JlCompress.cpp  NEWS  NEWS-RU  README  README-PL.txt  README.md  TODO  ansiescapecodehandler.cpp  ansiescapecodehandler.h  calendar.cpp  calendar.h  document.cpp  document.h  exif.cpp  exif.h  exif_reader.cpp  exif_reader.h  fman.cpp  fman.h  fontbox.cpp  fontbox.h  gamecontroller.pri  gui_utils.cpp  gui_utils.h  img_viewer.cpp  img_viewer.h  ioapi.c  ioapi.h  libretta_calc.cpp  libretta_calc.h  logmemo.cpp  logmemo.h  main.cpp  (+64 more)
.github/workflows/: cmake-mac.yml  cmake.yml  codeql-analysis.yml
desktop/: metainfo.xml  tea.desktop
docs/: index.html  museum.html  tea.css
encsign/: CP1251  CP866  KOI8-R  KOI8-U
hls/: awk.xml  bash.xml  basic.xml  clike.xml  cs.xml  d.xml  fortran.xml  hs.xml  java.xml  lilypond.xml  lout.xml  lua.xml  nasm.xml  nsis.xml  pascal.xml  perl.xml  php.xml  po.xml  prql.xml  python.xml  r.xml  rust.xml  sbv.xml  seed7.xml  subtitles.xml  tex.xml  vala.xml  verilog.xml  wikitext.xml  xml.xml
manuals/: en.html  pl.html  ru.html
manuals/plugins/: readme-en.txt
manuals/plugins/examples/click-and-close/: main.qml
manuals/plugins/examples/run-and-close/: main.qml
manuals/plugins/examples/settings-via-qmap/: main.qml
manuals/plugins/examples/use-fif/: main.qml
palettes/: Berry  Linux MC  Morning  Navigator  Pines  TEA  Turbo90  UNIX  Vinyl  paper-old  paper-toilet
specs/: tea.cmake.spec  tea.meson.spec  tea.qmake.spec
src/: calendar.cpp  document.cpp  document.h  enc.cpp  enc.h  exif_reader.cpp  fman.cpp  fman.h  gui_utils.cpp  img_viewer.cpp  img_viewer.h  ioapi.h  libretta_calc.cpp  logmemo.h  main.cpp  myjoystick.cpp  myjoystick.h  qioapi.cpp  quaziodevice.cpp  quazip.h  quazip_global.h  quazipdir.cpp  quazipdir.h  quazipfile.h  quazipfileinfo.h  quazipnewinfo.h  shortcuts.cpp  shortcuts.h  speech.cpp  speech.h  spellchecker.cpp  spellchecker.h  tea.cpp  tea.h  textproc.h  tio.cpp  tio.h  tzipper.cpp  unzip.c  utils.cpp  (+3 more)
text-data/: cm-tf-exts  cm-tf-names  lorem-ipsum  morse-en  morse-ru  template-html  template-html5  template-teaproject  tpl_c.c  tpl_cpp.cpp
themes/Cotton/: stylesheet.css
themes/Plum/: stylesheet.css
themes/Smaragd/: stylesheet.css
themes/TEA/: stylesheet.css
themes/Turbo/: stylesheet.css
themes/Vegan/: stylesheet.css
themes/Yagodnaya/: stylesheet.css
translations/: de.qm  de.ts  es.qm  es.ts  fr.qm  fr.ts  pl.qm  pl.ts  ru.qm  ru.ts  tea_de.qm  tea_de.ts  tea_fr.qm  tea_fr.ts  tea_ru.qm  tea_ru.ts
